attempted fix for win popup on mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,6 +607,7 @@ b {
     justify-content: center;
     align-items: center;
     visibility: hidden;
+    height:100%;
 }
 
 .win-popup-inner {
